Gulp introduced + SCSS task

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Digital clock (HTML/CSS, JS)",
   "main": "src/js/digital-clock.js",
   "scripts": {
+    "start": "gulp",
+    "dev": "gulp dev",
+    "prod": "gulp prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,5 +30,12 @@
   "bugs": {
     "url": "https://github.com/rom-melnyk/digital-clock/issues"
   },
-  "homepage": "https://github.com/rom-melnyk/digital-clock#readme"
+  "homepage": "https://github.com/rom-melnyk/digital-clock#readme",
+  "devDependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4"
+  }
 }
