--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
   },
   "homepage": "https://github.com/rom-melnyk/digital-clock#readme",
   "devDependencies": {
+    "browserify": "^16.1.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "uglify-es": "^3.3.9"
+    "gulp-util": "^3.0.8",
+    "uglify-es": "^3.3.9",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
